[gd_scene load_steps=2 format=3 uid="uid://cto6uew5e0ki3"]

[ext_resource type="Script" path="res://scripts/Player/debug_ui.gd" id="1_rppv1"]

[node name="DebugUi" type="CanvasLayer"]
script = ExtResource("1_rppv1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 119.0
color = Color(0.564706, 0.501961, 1, 0.462745)

[node name="SpeedLabel" type="Label" parent="."]
texture_filter = 2
offset_left = 5.0
offset_top = 4.0
offset_right = 107.0
offset_bottom = 27.0
scale = Vector2(1.3, 1.3)
text = "Speed: 0 px/s"

[node name="AngVelocityLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 44.0
offset_right = 184.0
offset_bottom = 67.0
scale = Vector2(1.12, 1.12)
text = "Ang. velocity:  0.0 rad/s"

[node name="Button" type="Button" parent="."]
offset_left = 63.0
offset_top = 81.0
offset_right = 176.0
offset_bottom = 112.0
scale = Vector2(0.8, 0.8)
text = "Restart scene"

[connection signal="pressed" from="Button" to="." method="_on_button_restart_pressed"]
